@@ -1,4 +1,4 @@
-.TH SYNTHV1 "1" "June 17, 2014"
+.TH SYNTHV1 "1" "August 31, 2020"
 .SH NAME
 synthv1 \- an old-school polyphonic synthesizer
 .SH SYNOPSIS
@@ -24,6 +24,10 @@ URI: http://synthv1.sourceforge.net/lv2
 \fB\-g\fR, \fB\-\-no\-gui\fR
 .IP
 Disable the graphical user interface (GUI)
+.HP
+\fB\-n\fR, \fB\-\-client\-name\fR=[\fIlabel\fR]
+.IP
+Set the JACK client name (default: synthv1)
 .HP
 \fB\-h\fR, \fB\-\-help\fR
 .IP
